# revera

./: .gitignore  README.md
backend/: .env.example  example.env  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  agent_models.py  base.py  critic.py  graph_builder.py  graph_nodes.py  graph_state.py  orchestrator.py  planner.py  retrieval.py  synthesis.py  web_search.py
backend/app/api/: __init__.py  chats.py  documents.py  feedback.py  history.py  research.py
backend/app/core/: __init__.py  auth.py  cache.py  checkpointer.py  circuit_breaker.py  config.py  database.py  exceptions.py  logging_config.py  memory_store.py  qdrant.py  supabase_memory_store.py  utils.py  validation.py
backend/app/llm/: __init__.py  gemini.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  agent_memory.py  background_critic.py  chat_cleanup.py  image_ingestion.py  ingestion.py  search.py  title_generator.py
frontend/: .env.example  components.json  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: agent-progress.tsx  agent-timeline.tsx  chats-sidebar.tsx  documents-panel.tsx  error-boundary.tsx  login-page.tsx  message-list.tsx  message-thinking.tsx  resizable-layout.tsx  sessions-sidebar.tsx  stream-markdown.tsx  upload-dialog.tsx
frontend/components/chat/: chat-input-area.tsx  streaming-content.tsx
frontend/components/ui/: collapsible.tsx  (+1 more)
frontend/hooks/: useStreamingChat.ts  useUIState.ts
frontend/lib/: api.ts  auth-context.tsx  chat-context.tsx  constants.ts  markdown-utils.ts  supabase.ts
frontend/store/: chat-store.ts
supabase/: schema.sql
supabase/migrations/: 001_initial_schema.sql  002_add_chats_and_memory.sql  002_search_functions.sql  schema.sql
(+3 files in other folders)
