[project]
name = "revera-backend"
version = "0.1.0"
description = "Multi-Agent Research Tool Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "fastembed>=0.7.4",
    "google-genai>=1.60.0",
    "httpx>=0.28.1",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.38",
    "langchain-google-genai>=2.0.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.9",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.16.2",
    "spacy>=3.7.0",
    "supabase>=2.27.2",
    "tavily-python>=0.7.19",
    "typer>=0.9.0",
    "uvicorn[standard]>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
